name:           RubyQuiz
version:        1.0
synopsis:       Solutions to RubyQuiz problems in Haskell
homepage:       https://github.com/abhin4v/rubyquiz
bug-reports:    https://github.com/abhin4v/rubyquiz/issues
license:        BSD3
copyright:      Copyright 2012 Abhinav Sarkar <abhinav@abhinavsarkar.net>
author:         Abhinav Sarkar
cabal-version:  >= 1.14
build-type:     Simple

source-repository head
    type:     git
    location: git@github.com:abhin4v/rubyquiz.git

executable TicTacToe
  build-depends     : base == 4.*,
                      containers == 0.4.*,
                      mtl == 2.1.*,
                      random == 1.0.*,
                      split == 0.1.4.*
  main-is           : TicTacToe.hs
  default-language  : Haskell2010

executable KnightsTravails
  build-depends     : base == 4.*,
                      containers == 0.4.*,
                      pqueue == 1.2.*
  main-is           : KnightsTravails.hs
  default-language  : Haskell2010
  other-modules     : AStar

executable Cryptograms
  build-depends     : base == 4.*,
                      containers == 0.4.*
  main-is           : Cryptograms.hs
  default-language  : Haskell2010

executable EnglishNumerals
  build-depends     : base == 4.*,
                      containers == 0.4.*,
                      split == 0.1.4.*
  main-is           : EnglishNumerals.hs
  default-language  : Haskell2010

executable GedcomParser
  build-depends     : base == 4.*,
                      parsec == 3.1.*
  main-is           : GedcomParser.hs
  default-language  : Haskell2010

executable PhoneNumberWords
  build-depends     : base == 4.*,
                      containers == 0.4.*
  main-is           : PhoneNumberWords.hs
  default-language  : Haskell2010

executable SolataireCipher
  build-depends     : base == 4.*,
                      optparse-applicative == 0.1.*
  main-is           : SolataireCipher.hs
  default-language  : Haskell2010

executable BarrelOfMonkeys
  build-depends     : base == 4.*,
                      containers == 0.4.*,
                      hxt == 9.2.*,
                      pqueue == 1.2.*,
                      fingertree-psqueue == 0.3.*,
                      text == 0.11.*,
                      optparse-applicative == 0.1.*
  main-is           : BarrelOfMonkeys.hs
  default-language  : Haskell2010