name:           rubyquiz
version:        1.0
synopsis:       Solutions to RubyQuiz problems in Haskell
homepage:       https://github.com/abhin4v/rubyquiz
bug-reports:    https://github.com/abhin4v/rubyquiz/issues
license:        BSD3
copyright:      Copyright 2012 Abhinav Sarkar <abhinav@abhinavsarkar.net>
author:         Abhinav Sarkar
cabal-version:  >= 1.14
build-type:     Simple

source-repository head
    type:     git
    location: git@github.com:abhin4v/rubyquiz.git

library
  exposed-modules   : AStar, TicTacToe, KnightsTravails, Cryptograms, EnglishNumerals,
                      GedcomParser, PhoneNumberWords, SolataireCipher,
                      BarrelOfMonkeys, AmazingMazes, SudokuSolver, NumericMaze,
                      DiceRoller
  build-depends     : base == 4.*,
                      containers == 0.4.*,
                      mtl == 2.1.*,
                      random == 1.0.*,
                      split == 0.2.1.*,
                      pqueue == 1.2.*,
                      parsec == 3.1.*,
                      optparse-applicative == 0.1.*,
                      hxt == 9.2.*,
                      fingertree-psqueue == 0.3.*,
                      text == 0.11.*,
                      unordered-containers == 0.2.1.*
  default-language  : Haskell2010

executable TicTacToe
  build-depends     : base == 4.*,
                      containers == 0.4.*,
                      mtl == 2.1.*,
                      random == 1.0.*,
                      split == 0.2.1.*
  main-is           : TicTacToe.hs
  ghc-options       : -main-is TicTacToe
  default-language  : Haskell2010

executable KnightsTravails
  build-depends     : base == 4.*,
                      containers == 0.4.*,
                      pqueue == 1.2.*
  main-is           : KnightsTravails.hs
  ghc-options       : -main-is KnightsTravails
  default-language  : Haskell2010

executable Cryptograms
  build-depends     : base == 4.*,
                      containers == 0.4.*
  main-is           : Cryptograms.hs
  ghc-options       : -main-is Cryptograms
  default-language  : Haskell2010

executable EnglishNumerals
  build-depends     : base == 4.*,
                      containers == 0.4.*,
                      split == 0.2.1.*
  main-is           : EnglishNumerals.hs
  ghc-options       : -main-is EnglishNumerals
  default-language  : Haskell2010

executable GedcomParser
  build-depends     : base == 4.*,
                      parsec == 3.1.*
  main-is           : GedcomParser.hs
  ghc-options       : -main-is GedcomParser
  default-language  : Haskell2010

executable PhoneNumberWords
  build-depends     : base == 4.*,
                      containers == 0.4.*
  main-is           : PhoneNumberWords.hs
  ghc-options       : -main-is PhoneNumberWords
  default-language  : Haskell2010

executable SolataireCipher
  build-depends     : base == 4.*,
                      optparse-applicative == 0.1.*
  main-is           : SolataireCipher.hs
  ghc-options       : -main-is SolataireCipher
  default-language  : Haskell2010

executable BarrelOfMonkeys
  build-depends     : base == 4.*,
                      containers == 0.4.*,
                      hxt == 9.2.*,
                      pqueue == 1.2.*,
                      fingertree-psqueue == 0.3.*,
                      text == 0.11.*,
                      optparse-applicative == 0.1.*
  main-is           : BarrelOfMonkeys.hs
  ghc-options       : -main-is BarrelOfMonkeys
  default-language  : Haskell2010

executable AmazingMazes
  build-depends     : base == 4.*,
                      containers == 0.4.*,
                      mtl == 2.1.*,
                      random == 1.0.*,
                      pqueue == 1.2.*
  main-is           : AmazingMazes.hs
  ghc-options       : -main-is AmazingMazes
  default-language  : Haskell2010

executable SudokuSolver
  build-depends     : base == 4.*,
                      containers == 0.4.*,
                      mtl == 2.1.*,
                      split == 0.2.1.*,
                      unordered-containers == 0.2.1.*
  main-is           : SudokuSolver.hs
  ghc-options       : -threaded -rtsopts -fllvm -main-is SudokuSolver
  default-language  : Haskell2010

executable NumericMaze
  build-depends     : base == 4.*,
                      containers == 0.4.*,
                      pqueue == 1.2.*
  main-is           : NumericMaze.hs
  ghc-options       : -main-is NumericMaze
  default-language  : Haskell2010

executable DiceRoller
  build-depends     : base == 4.*,
                      mtl == 2.1.*,
                      random == 1.0.*,
                      parsec == 3.1.*
  main-is           : DiceRoller.hs
  ghc-options       : -main-is DiceRoller
  default-language  : Haskell2010